fix-overflow

--- a/public/user/assets/css/custom.css
+++ b/public/user/assets/css/custom.css
@@ -87,6 +87,7 @@ ul {
 
 body {
     background: var(--bg-body);
+    overflow-x: hidden;
 }
 
 .header-wrap {
